# toyc-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  实践报告.md
include/toyc/: ast.h  ast_printer.h  codegen.h  diagnostic.h  lexer.h  parser.h  semantic.h  source_location.h  token.h
samples/: call.tc
src/: ast_printer.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp  semantic.cpp
tests/: riscv_runner.py  run_tests.sh
tests/fail/: break_outside.expected  call_before_definition.expected  call_before_definition.tc  call_global_variable.expected  call_global_variable.tc  call_shadowed_function.tc  call_variable.tc  const_assign.expected  const_assign.tc  const_nonconstant.expected  const_nonconstant.tc  continue_outside.expected  continue_outside.tc  duplicate_decl.expected  duplicate_decl.tc  duplicate_function.expected  duplicate_function.tc  duplicate_global.tc  duplicate_param.tc  function_global_conflict.expected  function_global_conflict.tc  int_return_void.expected  invalid_main_param.expected  invalid_main_param.tc  missing_return.expected  param_mismatch.expected  param_mismatch.tc  use_before_decl.expected  use_before_decl.tc  void_as_value.tc  void_in_condition.expected  void_in_condition.tc  void_return_value.expected  void_return_value.tc
tests/pass/: basic.tc  comments.tc  comparisons.tc  control.tc  div_mod.tc  dynamic_global_chain.tc  empty_stmt.tc  global_add.tc  global_chain.tc  global_const_chain.tc  global_decl_func_mix.tc  global_init.tc  global_mutation.tc  many_args.tc  negative_literals.tc  nested_calls.tc  param_shadow_block.tc  recursive.tc  (+3 more)
